spacyserver-ingress.yaml
# Copyright 2018 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spacyserver-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: spacy-server-ip-address 
    networking.gke.io/managed-certificates: spacy-server-certificate
spec:
  backend:
    serviceName: spacy-server-service
    servicePort: 1050
  tls:
  - secretName: spacy-server-certificate
    hosts:
    - www.spacy.interviewparrot.com
    - spacy.interviewparrot.com
